# Juice-Legacy

./: .gitignore  .gitmodules  .htaccess  README.md  Readme.md  error.php  index.php  style.css
about/: index.php  team.php
config/: database_config.php  web_config.php  web_function.php  web_preprocess.php  web_view.php
config/class/: about.class.php  account.class.php  db.class.php  judge.class.php  lesson.class.php  web.class.php
course/: course.php  course_list.php  course_preprocess.php
error/: 404.html  404_redirect.html
fonts/: DINRoundOT-Light.eot
juice/about/: about_refine.php  refine.php
juice/core/: Gemfile  Rakefile  Readme.md  SConstruct  build.sh  start-server.sh
juice/core/config/: config.yml  database.yml  environment.rb  judgeConfig.json
juice/core/lib/: Const.rb  Executor.rb  (+9 more)
juice/core/src/: CMakeLists.txt  SConscript  childErrorStatus.hpp  config.cpp  config.hpp  execute.cpp  execute.hpp  judgeStatus.hpp  libmain.cpp  logger.cpp  logger.hpp  logger_priv.hpp  main.cpp
juice/lesson/: lesson_add.php  lesson_handle.php  lesson_image_list.php  lesson_image_refine.php  lesson_list.php  lesson_refine.php
juice/web/: ann_refine.php
others/: show_imgages.php  solve_status.php
others/api/: apiGetSolveCode.php  apiGetSolveStatus.php  apiShowCourseImage.php  apiShowProfileImage.php
scripts/ckeditor/: build-config.js  ckeditor.js  config.js
scripts/css/: index.css  juice.css  lesson_add.css  login.css  member.css  pure.css  status.css
user/: login.php  logout.php  member.php  pre_solve_status.php  register.php  solve_status.php
(+23 files in other folders)
