cmake_minimum_required(VERSION 2.6)
PROJECT(executor)
set(executor_VERSION_MAJOR 0)
set(executor_VERSION_MINOR 1)
list( APPEND CMAKE_CXX_FLAGS "-std=gnu++11 ${CMAKE_CXX_FLAGS} -g -ftest-coverage -fprofile-arcs")
FIND_PACKAGE(Boost 1.55 COMPONENTS program_options filesystem system thread log REQUIRED)
INCLUDE_DIRECTORIES(${Boost_INCLUDE_DIR})
ADD_EXECUTABLE(executor main.cpp execute.cpp logger.cpp)
ADD_LIBRARY(execute SHARED libmain.cpp execute.cpp logger.cpp)
TARGET_LINK_LIBRARIES(executor ${Boost_LIBRARIES})
TARGET_LINK_LIBRARIES(execute ${Boost_LIBRARIES})
